# autotest

./: .gitignore  README.md  pyproject.toml
notebooks/: screenshot.ipynb
src/autotest/: __init__.py  __main__.py  annotate.py  cli.py  notebook_utils.py  play.py  record.py  screenshot.py  window.py
